# jax-moseq

./: .gitattributes  .gitignore  LICENSE.md  README.md  setup.cfg  setup.py  versioneer.py
docs/: requirements.txt
docs/source/: arhmm.rst  conf.py  index.rst  keypoint_slds.rst  slds.rst  utilities.rst
examples/: allo_dynamics_simulation_no_keypoints.ipynb  arhmm_example.ipynb  arhmm_script.py  glm_hmm.ipynb  slds_example.ipynb  test_hmm_equivalence.ipynb  test_lgssm_equivalence.ipynb  twarhmm_example.ipynb  warhmm_example.ipynb
jax_moseq/: __init__.py  _version.py
jax_moseq/models/: __init__.py  keypoint_slds.py
jax_moseq/models/allo_dynamics/: __init__.py  generate.py  gibbs.py  initialize.py  log_prob.py
jax_moseq/models/allo_keypoint_slds/: __init__.py  gibbs.py  initialize.py  log_prob.py
jax_moseq/models/arhmm/: __init__.py  generate.py  gibbs.py  initialize.py  log_prob.py
jax_moseq/models/aux_keypoint_slds/: gibbs.py  initialize.py
jax_moseq/models/bound_position/: __init__.py  gibbs.py  initialize.py  log_prob.py
jax_moseq/models/env_allo_dynamics/: __init__.py  generate.py  gibbs.py  initialize.py  log_prob.py
jax_moseq/models/glm_hmm/: __init__.py  gibbs.py  initialize.py
jax_moseq/models/hierarchical_gaussian_hmm/: gibbs.py
jax_moseq/models/keypoint_slds/: __init__.py  alignment.py  gibbs.py  initialize.py  log_prob.py
jax_moseq/models/slds/: __init__.py  gibbs.py  initialize.py  log_prob.py  smc.py  smc_RB.py
jax_moseq/models/twarhmm/: __init__.py  generate.py  gibbs.py  initialize.py  log_prob.py  utils.py
jax_moseq/models/warhmm/: __init__.py  em.py  generate.py  gibbs.py  initialize.py  log_prob.py
jax_moseq/utils/: __init__.py  autoregression.py  debugging.py  distributions.py  kalman.py  transitions.py  utils.py
