[metadata]
name = jax-moseq
author = Caleb Weinreb
author_email = calebsw@gmail.com
url = https://github.com/dattalab/jax-moseq/
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    numba>=0.56.4
    dynamax>=0.1.2
    tqdm
    optree

[options.extras_require]
cuda = 
    jax[cuda12]

[options.package_data]
* = *.md

[versioneer]
VCS = git
style = pep440
versionfile_source = jax_moseq/_version.py
versionfile_build = jax_moseq/_version.py
tag_prefix =
parentdir_prefix = 